--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -13,12 +13,12 @@ img {
 }
 
 .c-heading-title {
-    font-size: 64px;
+    font-size: min(calc((64 /1600) * 100vw), 64px);
     font-weight: 700;
 }
 
 .c-heading-text {
-    font-size: 18px;
+    font-size: min(calc((18 / 1600) * 100vw), 18px);
     font-weight: 500;
 }
 
@@ -98,11 +98,12 @@ img {
     position: relative;
     background-color: map.get(common.$colors, black800);
     border-radius: 40px;
-    font-size: 24px;
-    font-weight: 500;
+    font-size: 20px;
+    font-weight: 400;
     color: #fff;
-    padding: 20px 85px 20px 32px;
+    padding: 17px 72px 17px 32px;
     transition: background-color 0.3s;
+    line-height: 1.3;
     cursor: pointer;
 
     &::before {
@@ -112,15 +113,15 @@ img {
         border-right: solid 1.5px #fff;
         border-bottom: solid 1.5px #fff;
         position: absolute;
-        right: 40px;
+        right: 26px;
         transform: rotate(-45deg);
     }
 
     &::after {
         content: "";
-        width: 27.2px;
-        height: 1.5px;
-        right: 40px;
+        width: 22.2px;
+        height: 1px;
+        right: 30px;
         position: absolute;
         background-color: #fff;
     }
@@ -145,7 +146,7 @@ img {
         position: relative;
         padding: 80px 64px;
         background-color: #fff;
-        border-radius: 40px;
+        border-radius: 10px;
         box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
 
         &-title {
@@ -300,6 +301,7 @@ img {
             font-weight: 700;
             cursor: pointer;
             transition: opacity 0.3s ease;
+
             &:hover {
                 opacity: 0.5;
             }
@@ -432,6 +434,7 @@ img {
             text-decoration: underline;
             cursor: pointer;
             transition: opacity 0.3s ease;
+
             &:hover {
                 opacity: 0.5;
             }
